--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -1,26 +1,24 @@
 {
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "background_color": "#ffffff",
-  "categories": ["social", "games", "entertainment"],
+  "categories": [
+    "social",
+    "games",
+    "entertainment"
+  ],
   "description": "An open metaverse platform.",
   "display": "minimal-ui",
   "icons": [
     {
       "purpose": "maskable",
       "sizes": "512x512",
-      "src": "images/Icon-Maskable.png",
+      "src": "images/block-logo.png",
       "type": "image/png"
     },
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "images/Icon-512.png",
-      "type": "image/png"
-    },
-    {
-      "purpose": "any",
-      "sizes": "192x192",
-      "src": "images/Icon-192.png",
+      "src": "images/block-logo.png",
       "type": "image/png"
     }
   ],
