--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "build": "turbo build",
+    "build": "turbo run build",
     "ci:publish": "pnpm publish -r && changeset tag && git push --follow-tags",
-    "dev": "turbo dev --filter=!tsconfig --filter=!eslint-config-custom",
+    "dev": "turbo run dev --filter=!tsconfig --filter=!eslint-config-custom",
     "docker:build": "dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml build",
     "docker:dev": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose up --build -d && pnpm docker:init && pnpm dev",
     "docker:init": "node -e \"setTimeout(() => process.exit(0), 10000)\" && pnpm run --filter @unavi/client db:push",
     "docker:prod": "pnpm docker:stop && dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d && pnpm docker:init",
     "docker:stop": "dotenv -e ./apps/client/.env -c -- docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "format": "prettier --write .",
-    "generate": "turbo generate",
-    "lint": "turbo lint"
+    "generate": "turbo run generate",
+    "lint": "turbo run lint"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
