move to DIDs + upgrade drizzle

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
-    "db:push": "dotenv -c -- drizzle-kit push:mysql",
+    "db:push": "dotenv -c -- drizzle-kit push:mysql --driver=mysql2 --schema=./src/server/db/schema.ts --connectionString=$DATABASE_URL",
     "dev": "next dev",
     "lint": "cd ../.. && eslint --fix \"apps/client/**/*.{ts,tsx,cjs,mjs,json}\" --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json",
     "start": "next start"
@@ -33,9 +33,11 @@
     "@unavi/engine": "workspace:^",
     "@unavi/gltf-extensions": "workspace:^",
     "@unavi/protocol": "workspace:^",
+    "@unavi/web-did-resolver": "^2.0.27",
     "@wired-protocol/types": "^0.9.0",
     "boring-avatars": "^1.10.1",
-    "drizzle-orm": "^0.26.5",
+    "did-resolver": "^4.1.0",
+    "drizzle-orm": "^0.28.2",
     "ethers": "^5.7.2",
     "lattice-engine": "^0.3.18",
     "lucia": "2.0.0-beta.7",
@@ -65,7 +67,7 @@
     "@types/sharp": "^0.31.1",
     "@types/three": "~0.153.0",
     "autoprefixer": "^10.4.14",
-    "drizzle-kit": "^0.18.0",
+    "drizzle-kit": "^0.19.2",
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "postcss": "^8.4.24",
