--- a/apps/client/.env
+++ b/apps/client/.env
@@ -6,8 +6,15 @@ MYSQL_PASSWORD="passworddb"
 MYSQL_ROOT_PASSWORD="passworddb"
 MYSQL_PORT="3306"
 
-# Client
-NEXT_PUBLIC_CDN_ENDPOINT="${S3_ENDPOINT}/${S3_BUCKET}"
+#
+S3_ACCESS_KEY_ID="access_key"
+S3_BUCKET="unavi"
+S3_REGION="us-east-1"
+S3_SECRET="secret_key"
+S3_PORT="9000"
+S3_ENDPOINT="127.0.0.1:$S3_PORT" Client
+
+NEXT_PUBLIC_CDN_ENDPOINT="$S3_ENDPOINT/$S3_BUCKET"
 NEXT_PUBLIC_DEFAULT_HOST="localhost:4000"
 NEXT_PUBLIC_DOCS_URL="https://docs.unavi.xyz"
 NEXT_PUBLIC_DEPLOYED_URL="http://localhost:3000"
@@ -21,15 +28,8 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="cd68582175a9bbe3317e45f516bc29f7"
 NEXT_PUBLIC_CRYPTOAVATARS_API_KEY=""
 
 PLANETSCALE="false"
-DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:${MYSQL_PORT}/${MYSQL_DATABASE}"
+DATABASE_URL="mysql://$MYSQL_USER:$MYSQL_PASSWORD@localhost:$MYSQL_PORT/$MYSQL_DATABASE"
 DISABLE_PWA="true"
 
 # Replace with your own provider
 ETH_PROVIDER="https://eth-sepolia.g.alchemy.com/v2/9x4LwZa7dvHtTt6EkgOAPOUngvfFIYJQ"
-
-S3_ACCESS_KEY_ID="access_key"
-S3_BUCKET="unavi"
-S3_REGION="us-east-1"
-S3_SECRET="secret_key"
-S3_PORT="9000"
-S3_ENDPOINT="127.0.0.1:${S3_PORT}"
