--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -53,8 +53,8 @@
     "lattice-engine": "*",
     "mediasoup-client": "*",
     "nanoid": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "*",
+    "react-dom": "*",
     "three": "*",
     "thyseus": "*",
     "zustand": "*"
