--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -27,12 +27,13 @@
     "@types/node": "^18.16.17",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@types/three": "~0.154.0",
     "@unavi/protocol": "workspace:^",
     "@wired-protocol/types": "^0.9.0",
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "gl-matrix": "^4.0.0-beta.1",
-    "lattice-engine": "^0.3.18",
+    "lattice-engine": "0.3.20-beta.1",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
