--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -40,7 +40,7 @@
     "drizzle-orm": "^0.28.2",
     "ethers": "^5.7.2",
     "gl-matrix": "^4.0.0-beta.1",
-    "lattice-engine": "^0.3.18",
+    "lattice-engine": "0.3.20-beta.1",
     "lucia": "2.0.0-beta.7",
     "mediasoup-client": "^3.6.84",
     "mysql2": "^3.3.5",
