move engine to jotai

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -40,12 +40,13 @@
     "drizzle-orm": "^0.28.2",
     "ethers": "^5.7.2",
     "gl-matrix": "^4.0.0-beta.1",
+    "jotai": "^2.4.0",
     "lattice-engine": "0.3.20-beta.1",
     "lucia": "2.0.0-beta.7",
     "mediasoup-client": "^3.6.84",
     "mysql2": "^3.3.5",
     "nanoid": "^4.0.2",
-    "next": "^13.4.8",
+    "next": "^13.4.19",
     "next-axiom": "^0.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
