--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -25,39 +25,33 @@
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.14.0-beta.6",
     "@types/node": "^18.16.17",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
     "@types/three": "~0.154.0",
     "@unavi/protocol": "workspace:^",
     "@wired-protocol/types": "^0.9.0",
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "gl-matrix": "^4.0.0-beta.1",
+    "jotai": "^2.4.0",
     "lattice-engine": "0.3.20-beta.1",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "three": "~0.154.0",
     "thyseus": "^0.14.0-beta.5",
     "tsconfig": "workspace:^",
     "typescript": "~5.1.3",
     "vite": "^4.3.8",
-    "vite-plugin-dts": "^2.3.0",
-    "zustand": "^4.3.8"
+    "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
     "@unavi/protocol": "workspace:^",
     "@wired-protocol/types": "*",
     "gl-matrix": "^4.0.0-beta.1",
+    "jotai": "*",
     "lattice-engine": "*",
     "mediasoup-client": "*",
     "nanoid": "*",
-    "react": "*",
-    "react-dom": "*",
     "three": "*",
-    "thyseus": "*",
-    "zustand": "*"
+    "thyseus": "*"
   }
 }
