--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -20,8 +20,7 @@
   },
   "dependencies": {
     "@protobuf-ts/runtime": "^2.9.1",
-    "@wired-protocol/types": "^0.9.0",
-    "zod": "^3.21.4"
+    "@wired-protocol/types": "^0.9.0"
   },
   "devDependencies": {
     "@protobuf-ts/plugin": "^2.9.1",
