--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,15 +16,16 @@
     "dev": "tsc -w",
     "lint": "cd ../.. && eslint --fix packages/utils --ext .ts,.tsx,.mjs,.json --ignore-path .gitignore --ignore-path .prettierignore --ignore-pattern package.json"
   },
-  "dependencies": {
-    "@wired-protocol/types": "^0.9.0"
-  },
   "devDependencies": {
+    "@wired-protocol/types": "^0.9.0",
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "mediasoup": "^3.11.24",
     "mediasoup-client": "^3.6.84",
     "tsconfig": "workspace:^",
     "typescript": "~5.1.3"
+  },
+  "peerDependencies": {
+    "@wired-protocol/types": "*"
   }
 }
