--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -41,7 +41,7 @@
     "ethers": "^5.7.2",
     "gl-matrix": "^4.0.0-beta.1",
     "jotai": "^2.4.0",
-    "lattice-engine": "0.3.20-beta.1",
+    "lattice-engine": "1.0.0",
     "lucia": "2.0.0-beta.7",
     "mediasoup-client": "^3.6.84",
     "mysql2": "^3.3.5",
@@ -56,7 +56,7 @@
     "siwe": "^2.1.4",
     "swr": "^2.2.0",
     "three": "~0.154.0",
-    "thyseus": "^0.14.0-beta.5",
+    "thyseus": "^0.14.0",
     "viem": "^1.2.9",
     "wagmi": "^1.3.5",
     "zod": "^3.21.4",
@@ -76,7 +76,7 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "tsconfig": "workspace:^",
-    "typescript": "~5.1.3",
+    "typescript": "~5.2.2",
     "webpack": "^5.86.0"
   }
 }
