--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -23,7 +23,7 @@
     "@unavi/utils": "workspace:^"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "^0.14.0-beta.6",
+    "@thyseus/rollup-plugin-thyseus": "^0.14.0",
     "@types/node": "^18.16.17",
     "@types/three": "~0.154.0",
     "@unavi/protocol": "workspace:^",
@@ -32,16 +32,16 @@
     "eslint-config-custom": "workspace:^",
     "gl-matrix": "^4.0.0-beta.1",
     "jotai": "^2.4.0",
-    "lattice-engine": "0.3.20-beta.1",
+    "lattice-engine": "1.0.0",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "three": "~0.154.0",
-    "thyseus": "^0.14.0-beta.5",
+    "thyseus": "^0.14.0",
     "tsconfig": "workspace:^",
-    "typescript": "~5.1.3",
-    "vite": "^4.3.8",
-    "vite-plugin-dts": "^2.3.0"
+    "typescript": "~5.2.2",
+    "vite": "^4.4.9",
+    "vite-plugin-dts": "^3.3.1"
   },
   "peerDependencies": {
     "@unavi/protocol": "workspace:^",
