--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,8 +9,11 @@
   },
   "license": "GPL-3.0-or-later",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
