--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -23,7 +23,6 @@
     "@unavi/utils": "workspace:^"
   },
   "devDependencies": {
-    "@thyseus/rollup-plugin-thyseus": "^0.14.0",
     "@types/node": "^18.16.17",
     "@types/three": "~0.154.0",
     "@unavi/protocol": "workspace:^",
@@ -41,7 +40,7 @@
     "tsconfig": "workspace:^",
     "typescript": "~5.2.2",
     "vite": "^4.4.9",
-    "vite-plugin-dts": "^3.3.1"
+    "vite-plugin-thyseus-ts": "workspace:^"
   },
   "peerDependencies": {
     "@unavi/protocol": "workspace:^",
