add shell.nix + move to houseki

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -32,7 +32,7 @@
     "eslint": "^8.44.0",
     "eslint-config-custom": "workspace:^",
     "gl-matrix": "^4.0.0-beta.1",
-    "lattice-engine": "^1.0.1",
+    "houseki": "^1.0.1",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
@@ -50,7 +50,7 @@
     "@unavi/protocol": "workspace:^",
     "@wired-protocol/types": "^0.9.0",
     "gl-matrix": "^4.0.0-beta.1",
-    "lattice-engine": "^1.0.1",
+    "houseki": "^1.0.1",
     "mediasoup-client": "^3.6.84",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
