--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -39,7 +39,7 @@
     "did-resolver": "^4.1.0",
     "drizzle-orm": "^0.28.2",
     "ethers": "^5.7.2",
-    "houseki": "^1.1.6",
+    "houseki": "^1.1.8",
     "lucia": "2.0.0-beta.7",
     "mysql2": "^3.3.5",
     "nanoid": "^4.0.2",
@@ -54,6 +54,7 @@
     "swr": "^2.2.0",
     "three": "~0.154.0",
     "thyseus": "^0.14.0",
+    "valtio": "^1.11.2",
     "viem": "^1.2.9",
     "wagmi": "^1.3.5",
     "zod": "^3.21.4",
