setup nix rust building

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,3 +4,7 @@ version.workspace = true
 license.workspace = true
 repository.workspace = true
 edition.workspace = true
+
+[dependencies]
+bevy = "0.11.3"
+
