--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - dev
 
 jobs:
-  lint:
+  lint-web:
     name: Lint
     runs-on: ubuntu-latest
     env:
@@ -45,6 +45,9 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
+
+      - name: Enter directory
+        run: cd web
 
       - name: Install dependencies
         run: pnpm install
