rename core -> engine

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,4 +7,4 @@ edition.workspace = true
 
 [dependencies]
 bevy = "0.11.3"
-unavi-core = { path = "../core" }
+unavi-engine = { path = "../engine" }
