--- a/web/frontend/Cargo.toml
+++ b/web/frontend/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib", "rlib"]
 leptos = { version = "0.5.1", features = ["hydrate"] }
 unavi-web-app = { path = "../app", features = ["hydrate"] }
 unavi-app = { path = "../../app" }
+console_error_panic_hook = "0.1.7"
