--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,4 +8,5 @@ edition.workspace = true
 [dependencies]
 bevy = "0.11.3"
 bevy_rapier3d = { version = "0.22.0", features = ["simd-stable"] }
+cfg-if = "1.0.0"
 tracing = "0.1.40"
