--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
-      - run: cargo fmt --check --all
+      - run: cargo fmt --all
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: format"
+          default_author: github_actions
 
   check:
     runs-on: ubuntu-latest
@@ -21,6 +25,11 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: nix flake check
+      - run: nix flake check --all-systems
+      - run: nix develop -c cargo clippy --fix -- -D warnings
       - run: nix develop -c cargo doc --all-features --no-deps
       - run: nix develop -c cargo test --all-features --all-targets
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: lint"
+          default_author: github_actions
