--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,3 +9,4 @@ edition.workspace = true
 bevy = "0.12.0"
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
 bevy_vrm = "0.0.5"
+wired-protocol = { path = "../protocol" }
