--- a/unavi-native/Cargo.toml
+++ b/unavi-native/Cargo.toml
@@ -6,4 +6,4 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-unavi-app = { path = "../app" }
+unavi-app = { path = "../unavi-app" }
