--- a/unavi-server/Cargo.toml
+++ b/unavi-server/Cargo.toml
@@ -5,16 +5,6 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
-[dependencies]
-axum = "0.6.20"
-tokio = { version = "1.33.0", features = ["full"] }
-tower = "0.4.13"
-tower-http = { version = "0.4.4", features = ["fs"] }
-
-leptos = { version = "0.5.1", features = ["ssr"], optional = true }
-leptos_axum = { version = "0.5.1", optional = true }
-unavi-web-app = { path = "../unavi-web/app", features = ["ssr"], optional = true }
-
 [features]
 default = ["web", "world"]
 web = [
@@ -23,4 +13,35 @@ web = [
   "dep:unavi-web-app"
 ]
 world = [
+  "dep:bytes",
+  "dep:h3",
+  "dep:h3-quinn",
+  "dep:h3-webtransport",
+  "dep:quinn",
+  "dep:rcgen",
+  "dep:rustls",
+  "dep:time"
 ]
+
+[dependencies]
+axum = "0.6.20"
+tokio = { version = "1.33.0", features = ["full"] }
+tower = "0.4.13"
+tower-http = { version = "0.4.4", features = ["fs"] }
+tracing = "0.1.40"
+
+leptos = { version = "0.5.1", features = ["ssr"], optional = true }
+leptos_axum = { version = "0.5.1", optional = true }
+unavi-web-app = { path = "../unavi-web/app", features = ["ssr"], optional = true }
+
+bytes = { version = "1.5.0", optional = true }
+h3 = { version = "0.0.3", optional = true }
+h3-quinn = { version = "0.0.4", optional = true }
+h3-webtransport = { version = "0.1.0", optional = true }
+quinn = { version = "0.10.2", optional = true }
+rcgen = { version = "0.11.3", optional = true }
+rustls = { version = "0.21.9", optional = true }
+time = { version = "0.3.30", optional = true }
+
+[dev-dependencies]
+rustls-native-certs = "0.6.3"
