--- a/unavi-server/Cargo.toml
+++ b/unavi-server/Cargo.toml
@@ -13,14 +13,10 @@ web = [
   "dep:unavi-web-app"
 ]
 world = [
-  "dep:bytes",
-  "dep:h3",
-  "dep:h3-quinn",
-  "dep:h3-webtransport",
-  "dep:quinn",
   "dep:rcgen",
   "dep:rustls",
-  "dep:time"
+  "dep:time",
+  "dep:wtransport"
 ]
 
 [dependencies]
@@ -29,19 +25,16 @@ tokio = { version = "1.33.0", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.4.4", features = ["fs"] }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 leptos = { version = "0.5.1", features = ["ssr"], optional = true }
 leptos_axum = { version = "0.5.1", optional = true }
 unavi-web-app = { path = "../unavi-web/app", features = ["ssr"], optional = true }
 
-bytes = { version = "1.5.0", optional = true }
-h3 = { version = "0.0.3", optional = true }
-h3-quinn = { version = "0.0.4", optional = true }
-h3-webtransport = { version = "0.1.0", optional = true }
-quinn = { version = "0.10.2", optional = true }
 rcgen = { version = "0.11.3", optional = true }
 rustls = { version = "0.21.9", optional = true }
 time = { version = "0.3.30", optional = true }
+wtransport = { version = "0.1.8", optional = true }
 
 [dev-dependencies]
 rustls-native-certs = "0.6.3"
