--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,21 +10,27 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: easimon/maximize-build-space@master
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
       - run: nix flake check --all-systems
-      - run: nix develop -c cargo clippy --fix -- -D warnings
-      - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items
-      - run: nix develop -c cargo test --workspace --all-features
+      - run: cargo doc --workspace --all-features --no-deps --document-private-items
+      - run: cargo test --workspace --all-features
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo clippy --fix -- -D warnings
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: lint"
           default_author: github_actions
+
   fmt:
-    needs: check
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
