--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,17 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
       - run: nix flake check --all-systems
-      - run: cargo doc --workspace --all-features --no-deps --document-private-items
-      - run: cargo test --workspace --all-features
+      - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items
+      - run: nix develop -c cargo test --workspace --all-features
 
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: cargo clippy --fix --no-deps -- -D warnings
+      - run: nix develop -c cargo clippy --fix --no-deps -- -D warnings
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: lint"
