--- a/unavi-app/Cargo.toml
+++ b/unavi-app/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 bevy = "0.12.0"
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
