--- a/unavi-server/Cargo.toml
+++ b/unavi-server/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [features]
 default = ["web", "world"]
 web = [
