--- a/unavi-web/app/Cargo.toml
+++ b/unavi-web/app/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 http = "0.2.9"
 leptos = "0.5.1"
