--- a/wired-protocol/Cargo.toml
+++ b/wired-protocol/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 bytes = "1.5.0"
 prost = "0.12.2"
