--- a/unavi-app/Cargo.toml
+++ b/unavi-app/Cargo.toml
@@ -9,7 +9,15 @@ edition.workspace = true
 workspace = true
 
 [dependencies]
+aeronet = { version = "0.3.0", features = ["bevy"] }
+aeronet_wt_core = "0.3.0"
+aeronet_wt_native = { version = "0.3.0", features = ["bevy"] }
+anyhow = "1.0.75"
 bevy = "0.12.0"
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
 bevy_vrm = "0.0.5"
+serde = { version = "1.0.193", features = ["derive"] }
+tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
 wired-protocol = { path = "../wired-protocol" }
+wtransport = "0.1.8"
