--- a/unavi-server/Cargo.toml
+++ b/unavi-server/Cargo.toml
@@ -16,6 +16,10 @@ web = [
   "dep:unavi-web-app"
 ]
 world = [
+  "dep:aeronet",
+  "dep:aeronet_wt_core",
+  "dep:aeronet_wt_native",
+  "dep:bevy",
   "dep:rcgen",
   "dep:rustls",
   "dep:time",
@@ -23,6 +27,7 @@ world = [
 ]
 
 [dependencies]
+anyhow = "1.0.75"
 axum = "0.6.20"
 tokio = { version = "1.33.0", features = ["full"] }
 tower = "0.4.13"
@@ -34,6 +39,10 @@ leptos = { version = "0.5.1", features = ["ssr"], optional = true }
 leptos_axum = { version = "0.5.1", optional = true }
 unavi-web-app = { path = "../unavi-web/app", features = ["ssr"], optional = true }
 
+aeronet = { version = "0.3.0",  features = ["bevy"], optional = true }
+aeronet_wt_core = { version = "0.3.0", optional = true }
+aeronet_wt_native = { version = "0.3.0", features = ["bevy"], optional = true } 
+bevy = { version = "0.12.0", optional = true }
 rcgen = { version = "0.11.3", optional = true }
 rustls = { version = "0.21.9", optional = true }
 time = { version = "0.3.30", optional = true }
