--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix flake check --all-systems
       - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items
-      - run: nix develop -c cargo test --workspace --all-features
+      - run: nix develop -c cargo test --workspace --all-features --features bevy/dynamic_linking
 
   lint:
     runs-on: ubuntu-latest
