enable dynamic linking for docs ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix flake check --all-systems
-      - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items
+      - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items --features bevy/dynamic_linking
       - run: nix develop -c cargo test --workspace --all-features --features bevy/dynamic_linking
 
   lint:
