add shared wit to unavi-ui

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "unavi-wired-api/wit"]
 	path = unavi-wired-api/wit
 	url = git@github.com:unavi-xyz/wired-protocol-wit.git
+[submodule "unavi-ui/wit"]
+	path = unavi-ui/wit
+	url = git@github.com:unavi-xyz/wired-protocol-wit.git
