add rust cache to check?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           submodules: "true"
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
       - run: nix flake check --all-systems
       - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items --features bevy/dynamic_linking
       - run: nix develop -c cargo test --workspace --all-features --features bevy/dynamic_linking
