add maximize-build-disk-space to check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
+      - uses: easimon/maximize-build-space@master
       - uses: actions/checkout@v4
         with:
           submodules: "true"
