--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "unavi-wired-api/wit"]
-	path = unavi-wired-api/wit
+	path = crates/unavi-wired-api/wit
 	url = git@github.com:unavi-xyz/wired-protocol-wit.git
 [submodule "unavi-ui/wit"]
-	path = unavi-ui/wit
+	path = crates/unavi-ui/wit
 	url = git@github.com:unavi-xyz/wired-protocol-wit.git
 [submodule "wired-protocol-proto/protos"]
-	path = wired-protocol-proto/protos
+	path = crates/wired-protocol-proto/protos
 	url = git@github.com:unavi-xyz/wired-protocol-proto.git
