--- a/wasm/unavi-system/Cargo.toml
+++ b/wasm/unavi-system/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "unavi-ui"
+name = "unavi-system"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 wit-bindgen = "0.15.0"
