--- a/wasm/unavi-system/bindgen/Cargo.toml
+++ b/wasm/unavi-system/bindgen/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "unavi-wired-api"
+name = "unavi-system-bindgen"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
 [dependencies]
-wit-bindgen = "0.15.0"
+wasmtime = { version = "15.0.0", features = ["component-model"] }
