add dynamic linking to clippy ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: nix develop -c cargo clippy --fix --no-deps -- -D warnings
+      - run: nix develop -c cargo clippy --fix --no-deps --features bevy/dynamic_linking -- -D warnings
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: lint"
