fix fmt job not using nix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: cargo fmt --all
+      - run: nix develop -c cargo fmt --all
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: format"
