--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -21,5 +21,6 @@ tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
 wasmtime = { version = "15.0.0", features = ["component-model"] }
+wired-host-bindgen = { path = "../../wasm/wired-host/bindgen" }
 wired-protocol-proto = { path = "../wired-protocol-proto" }
 wtransport = "0.1.8"
