re-enable cargo-leptos

--- a/crates/unavi-web-client/Cargo.toml
+++ b/crates/unavi-web-client/Cargo.toml
@@ -9,7 +9,7 @@ edition.workspace = true
 workspace = true
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 leptos = { version = "0.5.1", features = ["hydrate"] }
