--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -11,7 +11,6 @@ workspace = true
 [dependencies]
 aeronet = { version = "0.3.0", features = ["bevy"] }
 aeronet_wt_core = "0.3.0"
-aeronet_wt_native = { version = "0.3.0", features = ["bevy"] }
 anyhow = "1.0.75"
 bevy = "0.12.0"
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
@@ -20,7 +19,13 @@ serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
-wasmtime = { version = "15.0.0", features = ["component-model"] }
 wired-host-bindgen = { path = "../../wasm/wired-host/bindgen" }
 wired-protocol-proto = { path = "../wired-protocol-proto" }
 wtransport = "0.1.8"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+# aeronet_wt_wasm = { version = "0.3.0", features = ["bevy"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+aeronet_wt_native = { version = "0.3.0", features = ["bevy"] }
+wasmtime = { version = "15.0.0", features = ["component-model"] }
