--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,23 @@ on:
   pull_request:
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: Swatinem/rust-cache@v2
+      - run: nix develop -c sh scripts/build-wasm.sh
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: build wasm libs"
+          default_author: github_actions
+
   check:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: AdityaGarg8/remove-unwanted-software@v1
@@ -25,22 +41,6 @@ jobs:
       - run: nix develop -c cargo doc --workspace --all-features --no-deps --document-private-items --features bevy/dynamic_linking
         # Exclude WASM libraries, wit-bindgen currently fails tests
       - run: nix develop -c cargo test --workspace --all-features --features bevy/dynamic_linking --exclude unavi-system --exclude unavi-ui --exclude wired-host
-
-  build:
-    needs: check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: Swatinem/rust-cache@v2
-      - run: nix develop -c sh scripts/build-wasm.sh
-      - uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore: build wasm libs"
-          default_author: github_actions
 
   lint:
     runs-on: ubuntu-latest
