--- a/crates/wired-world-proto/Cargo.toml
+++ b/crates/wired-world-proto/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wired-protocol-proto"
+name = "wired-world-proto"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
