--- a/wasm/wired-script/bindgen/Cargo.toml
+++ b/wasm/wired-script/bindgen/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wired-host-bindgen"
+name = "wired-script-bindgen"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
