--- a/wasm/wired-script/Cargo.toml
+++ b/wasm/wired-script/Cargo.toml
@@ -1,7 +1,7 @@
 cargo-features = ["per-package-target"]
 
 [package]
-name = "wired-host"
+name = "wired-script"
 default-target = "wasm32-unknown-unknown"
 version.workspace = true
 license.workspace = true
