--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -42,7 +42,7 @@ unavi-web-common= { path = "../unavi-web-common", features = ["ssr"], optional =
 aeronet = { version = "0.3.0",  features = ["bevy"], optional = true }
 aeronet_wt_core = { version = "0.3.0", optional = true }
 aeronet_wt_native = { version = "0.3.0", features = ["bevy"], optional = true } 
-bevy = { version = "0.12.0", optional = true }
+bevy = { workspace = true, optional = true }
 rcgen = { version = "0.11.3", optional = true }
 rustls = { version = "0.21.9", optional = true }
 time = { version = "0.3.30", optional = true }
