--- a/crates/unavi-server-world/Cargo.toml
+++ b/crates/unavi-server-world/Cargo.toml
@@ -10,4 +10,5 @@ rcgen = "0.11.3"
 time = "0.3.30"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 wtransport = "0.1.8"
