--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -20,6 +20,7 @@ unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
 wired-script-bindgen = { path = "../../wasm/wired-script/bindgen" }
 wtransport = "0.1.8"
 xwt = "0.3.0"
+xwt-core = "0.2.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmtime = { version = "15.0.0", features = ["component-model"] }
