work on browser compilation

--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -16,14 +16,28 @@ anyhow = "1.0.75"
 bevy.workspace = true
 bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
 bevy_vrm = "0.0.6"
+futures-lite = "2.1.0"
 serde = { version = "1.0.193", features = ["derive"] }
-tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
-unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
-wired-script-bindgen = { path = "../../wasm/wired-script/bindgen" }
-wtransport = "0.1.8"
+# unavi-system-bindgen = { path = "../../wasm/unavi-system/bindgen" }
+# wired-script-bindgen = { path = "../../wasm/wired-script/bindgen" }
 xwt = "0.3.0"
 xwt-core = "0.2.0"
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+[target.'cfg(target_family = "wasm")'.dependencies]
+js-sys = "0.3.66"
+web-sys = { version = "0.3.66", features = [
+  "WebTransport",
+  "WebTransportOptions",
+  "WebTransportBidirectionalStream",
+  "WebTransportSendStream",
+  "WebTransportReceiveStream",
+  "ReadableStreamDefaultReader",
+  "WritableStreamDefaultWriter",
+  "WebTransportDatagramDuplexStream",
+] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+tokio = { version = "1.34.0", features = ["full"] }
 wasmtime = { version = "15.0.0", features = ["component-model"] }
+wtransport = "0.1.8"
