--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -5,6 +5,9 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [features]
 disable-cert-validation = ["wtransport/dangerous-configuration"]
 
@@ -24,6 +27,7 @@ xwt = "0.3.0"
 xwt-core = "0.2.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen = "0.2.90"
 xwt-web-sys = "0.3.1"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
