fix deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,6 @@ jobs:
       - run: nix build .#web
       - uses: s0/git-publish-subdir-action@v2.6.0
         env:
+          REPO: self
           BRANCH: deployment
           FOLDER: result
